# mcp-server-hosting-cli

./: .gitignore  Dockerfile  PRD.md  README.md  pyproject.toml  requirements.txt
mcp_host/: __init__.py  app_setup.py
mcp_host/backend/: container.sh  deployment.py  docker.sh
mcp_host/cli/: main.py  server_template.py
mcp_host/tools/: calculator.py  calendar.py  search.py  weather.py
mcp_server_hosting_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
