[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-server-hosting-cli"
version = "0.1.0"
description = "A command-line tool for creating and deploying MCP servers"
authors = [
    {name = "Shawn Yang", email = "xiaolongyang@google.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "typer[all]>=0.4.0",
    "google-cloud-run>=0.7.0",
    "google-auth>=2.0.0",
    "duckduckgo_search>=8.0.2",
    "mcp>=1.9.0",
    "uvicorn>=0.15.0",
    "starlette>=0.19.0",
    "httpx>=0.20.0",
    "GitPython>=3.1.0"
]

[project.scripts]
mcp-host = "mcp_host.cli.main:cli" 